--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: lightgray;
+    background-color: #C4ADA9;
   }
 
   header {
@@ -23,13 +23,13 @@ body {
   h1 {
     font-size: 100px;
     font-family: 'Great Vibes', cursive;
-    color: aliceblue;
+    color: #C4ADA9;
     
   }
 
   .sub {
     font-size: 30px;
-    color: aliceblue;
+    color: #C4ADA9;
     position: absolute;
     display: grid;
     align-self: start;
@@ -40,44 +40,43 @@ body {
     color: black;
   }
 
-  
-  
   nav {
-    display: flex;
-    justify-content: space-between;
     font-size: 15px;
+    text-align: center;
   }
   
   ul {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    background-color: #800020;
+    
   }
-  
+
   li {
-    display: grid;
+    display: inline-block;
+    width: 5%;
+
   }
-  
+
   a {
     color: black;
     text-decoration: none;
   }
   
   main {
-    padding: 20px;
+    padding: 0;
   }
 
-  h2{
+  h2 {
     padding: 0;
+  }
+
+  section {
+    padding: 20px;
   }
   
   footer {
     background-color: #800020;
     text-align: center;
-  }
-
-  .white_font{
-    color: white;
-    padding: 20px;
+    padding: 1em;
   }
   
