--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+
+@media (max-width: 700px) {
+  header {
+    width: 100%;
+    font-size: ;
+  }
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -24,15 +32,16 @@ body {
     font-size: 100px;
     font-family: 'Great Vibes', cursive;
     color: #C4ADA9;
-    
+    text-shadow: 1px 1px 2px #1B0F10;
+    margin-bottom: 0;
   }
 
   .sub {
     font-size: 30px;
     color: #C4ADA9;
     position: absolute;
-    display: grid;
     align-self: start;
+    text-shadow: 1px 1px 1px #1B0F10;
   }
 
   p {
@@ -43,18 +52,21 @@ body {
   nav {
     font-size: 15px;
     text-align: center;
+    padding-left: 40%;
+    padding-right: 40%;
   }
   
   ul {
     list-style: none;
-    background-color: #800020;
-    
+    display: flex;
+    justify-content: center;
+    align-content: space-between;
   }
 
   li {
-    display: inline-block;
-    width: 5%;
-
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
+    background-color: #807C8C;
   }
 
   a {
@@ -63,14 +75,15 @@ body {
   }
   
   main {
-    padding: 0;
+    background-color: #D3D3D3;
+    padding: 0 5% 5%;
   }
 
   h2 {
     padding: 0;
   }
 
-  section {
+  section .callToAction{
     padding: 20px;
   }
   
@@ -80,7 +93,7 @@ body {
     padding: 1em;
   }
 
-  .white_font {
+  .copyright_font {
     color: #C4ADA9;
   }
   
