--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 
-@media (max-width: 700px) {
+@media (max-width: 500px) {
   header {
     width: 100%;
-    font-size: ;
+    font-size: 80px;
   }
 }
 
