--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,10 +4,16 @@
 @media (max-width: 700px) {
   header {
     width: 100%;
-    font-size: 80px;
-    margin-top: 0;
-    margin-left: 0;
+    font-size: 60px;
+    margin: 0;
+    padding: 1%
   }
+
+  .circle {
+    width: 120px;
+    padding-left: 20px;
+  }
+
 }
 
 body {
