--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,14 +3,21 @@
 
 @media (max-width: 700px) {
   header {
-    font-size: 20px;
     margin: 0;
     padding: 1%
   }
 
   .circle {
-    width: 20px;
+    width: 120px;
     padding-left: 20px;
+  }
+
+  h1 {
+    font-size: 80px;
+  }
+
+  .sub {
+    font-size: 24px;
   }
 
 }
